--- a/styles/style-content.css
+++ b/styles/style-content.css
@@ -17,3 +17,10 @@ body {
   padding-bottom: 18px;
   text-decoration: underline wavy #1070c9;
 }
+
+.color-header {
+  background-image: linear-gradient(to right, #bc4e9c, #f80759);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
